Update: News - 2022 / 12 / 17 - FLL 0.6.2 Stable Release.

--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2022 / 12 / 17</div>
+            <a href="news/2022_12_17-fll_0_6_2_release.html" class="nav-text link">FLL 0.6.2 Release</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2022 / 10 / 31</div>
             <a href="news/2022_10_31-fll_0_6_1_release.html" class="nav-text link">FLL 0.6.1 Release</a>
           </div>
@@ -101,8 +105,45 @@
             <h1 class="section-title h h1">News</h1>
           </header>
 
-          <article id="2022_10_31-fll_0_6_1_release" class="article">
+          <article id="2022_12_17-fll_0_6_2_release" class="article">
             <header class="article-header header">
+              <h2 id="2022_12_17-fll_0_6_2_release-title" class="article-title h h2">2022 / 12 / 17 - FLL 0.6.2 Release</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                The <strong class="strong">Featureless Linux Library</strong> stable version 0.6.2 is released.
+              </p>
+              <p class="p">
+                This release contains several security and bug fixes.
+                There are also several improvements to the building and packaging scripts.
+              </p>
+              <p class="p">
+                Added the following <code class="code">stand_alone</code> programs:
+              </p>
+              <ul>
+                <li><code class="code">byte_dump</code></li>
+                <li><code class="code">firewall</code></li>
+              </ul>
+              <p class="p">
+                The flagship program is <strong class="strong">Featureless Make</strong>.
+                All projects and programs now have a <code class="code">fakefile</code> for building as they should have had.
+              </p>
+              <p class="p">
+                Problems with the Unicode handling have been identified and fixed.
+                The <abbr title="Featureless Linux Library">FLL</abbr> and implementing programs like <code class="code">byte_dump</code> and <code class="code">utf8</code> should now have more accurate handling of Unicode characters.
+              </p>
+              <p class="p">
+                Check out the project on the <a href="fll.html#release" class="link"><abbr title="Featureless Linux Library">FLL</abbr> release</a> page.
+              </p>
+              <p class="p">
+                <a id="2022_12_17-fll_0_6_2_release-more" href="news/2022_12_17-fll_0_6_2_release.html" class="content link" aria-labelledby="2022_12_17-fll_0_6_2_release-more 2022_12_17-fll_0_6_2_release-title">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article id="2022_10_31-fll_0_6_1_release" class="article">
+            <header class="article-header header separate">
               <h2 id="2022_10_31-fll_0_6_1_release-title" class="article-title h h2">2022 / 10 / 31 - FLL 0.6.1 Release</h2>
             </header>
 
