Update: Add ID tags to the release tables.

--- a/fll.html
+++ b/fll.html
@@ -122,7 +122,7 @@
                  A <em class="em">pre-packaged release</em> is the project packaged into a <em class="em">monolithic</em> structure. The programs are also pre-packaged to expect to link against a <em class="em">monolithic</em> <abbr title="Featureless Linux Library">FLL</abbr> package.
               </p>
               <div class="center">
-                <table class="table fll-release">
+                <table id="release-monolithic" class="table fll-release">
                   <caption class="caption"><abbr title="Featureless Linux Library">FLL</abbr> Pre-packaged Files</caption>
                   <thead class="head set">
                     <tr class="row">
@@ -259,7 +259,7 @@
                 There are also <strong class="strong">stand alone</strong> sources and related files for some of the programs:
               </p>
               <div class="center">
-                <table class="table fll-release">
+                <table id="release-stand_alone" class="table fll-release">
                   <caption class="caption"><abbr title="Featureless Linux Library">FLL</abbr> Pre-packaged Files (Stand Alone)</caption>
                   <thead class="head set">
                     <tr class="row">
