Update: Add 'Source' to tables to better describe that the packages are source packages.

--- a/fll.html
+++ b/fll.html
@@ -123,7 +123,7 @@
               </p>
               <div class="center">
                 <table id="release-monolithic" class="table fll-release">
-                  <caption class="caption"><abbr title="Featureless Linux Library">FLL</abbr> Pre-packaged Files</caption>
+                  <caption class="caption"><abbr title="Featureless Linux Library">FLL</abbr> Pre-packaged Source Files</caption>
                   <thead class="head set">
                     <tr class="row">
                       <td class="column">Package</td>
@@ -260,7 +260,7 @@
               </p>
               <div class="center">
                 <table id="release-stand_alone" class="table fll-release">
-                  <caption class="caption"><abbr title="Featureless Linux Library">FLL</abbr> Pre-packaged Files (Stand Alone)</caption>
+                  <caption class="caption"><abbr title="Featureless Linux Library">FLL</abbr> Pre-packaged Source Files (Stand Alone)</caption>
                   <thead class="head set">
                     <tr class="row">
                       <td class="column">Package</td>
